k8s/deployment.yaml
# TODO: livenessProbe, readinessProbe
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage-depl
  labels:
    app: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
        - name: homepage
          image: ghcr.io/lolei/homepage:0.1.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          livenessProbe:
            initialDelaySeconds: 10
            httpGet:
              port: 3000
              path: /api/health
          readinessProbe:
            initialDelaySeconds: 10
            httpGet:
              port: 3000
              path: /api/health
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: homepage-svc
  labels:
    run: homepage
spec:
  selector:
    app: homepage
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-ingress
spec:
  rules:
    - host: homepage.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage-svc
                port:
                  number: 80
